# lumina

./: .gitignore  DEPENDENCIES  DEPENDENCIES.md  DeveloperGuidelines.txt  LICENSE  OS-detect.pri  README.md  ROADMAP  daily_use_tips.md  global.h  i18n-projects  lumina-0.9_pre.ebuild  lumina-9999.ebuild  lumina-desktop-32.spec  lumina-desktop-64.spec  lumina-desktop.spec  lumina.pro  luminaKeys.txt  make-global-h.sh  mkport.sh
icon-theme/: AUTHORS  CMakeLists.txt  LICENSE  README.md  changeFillColor.sh  icon-theme.pro  index.theme
icon-theme/lumina-icons/: CMakeLists.txt  LICENSE  icon-list.md  index.theme  lumina-icons.pro
icon-theme/material-design-dark/: CMakeLists.txt  index.theme  material-design-dark.pro
icon-theme/material-design-dark/devices/: devices.list
icon-theme/material-design-light/: CMakeLists.txt  index.theme  material-design-light.pro
icon-theme/material-design-light/animations/: animations.list
icon-theme/material-design-light/emblems/: emblems.list
icon-theme/material-design-light/international/: international.list
icon-theme/material-design-light/places/: places.list
icon-theme/material-design-light/status/: status.list
icon-theme/material-icons-dark/categories/: categories.list
icon-theme/material-icons-dark/devices/: devices.list
icon-theme/material-icons-dark/emotes/: emotes.list
icon-theme/material-icons-dark/places/: places.list
icon-theme/material-icons-light/: LICENSE
icon-theme/material-icons-light/actions/: actions.list
icon-theme/material-icons-light/applications/: applications.list
icon-theme/material-icons-light/categories/: categories.list
icon-theme/material-icons-light/emotes/: emotes.list
icon-theme/material-icons-light/mimetypes/: mimetypes.list
icon-theme/material-icons-light/places/: places.list
icon-theme/material-icons-light/status/: status.list
icon-theme/scalable/actions/: TODO.txt
icon-theme/scalable/apps/: TODO.txt
icon-theme/scalable/categories/: TODO.txt
icon-theme/scalable/devices/: TODO.txt
icon-theme/scalable/emblems/: TODO.txt
icon-theme/scalable/mimetypes/: TODO.txt
icon-theme/scalable/places/: TODO.txt
icon-theme/scalable/special/: TODO.txt
icon-theme/scalable/status/: TODO.txt
icon-theme/template-icons/: LICENSE.txt
src-qt5/core/: CMakeLists.txt  README.md  core.pro
src-qt5/core-utils/: CMakeLists.txt  README.md  core-utils.pro
src-qt5/core-utils/lumina-config/: AppDialog.h  AppDialog.ui  CMakeLists.txt  ColorDialog.cpp  ColorDialog.h  ColorDialog.ui  GetPluginDialog.cpp  LPlugins.cpp  PanelWidget.cpp  PanelWidget.h  PanelWidget.ui  ScriptDialog.cpp  ScriptDialog.h  ScriptDialog.ui  ThemeDialog.ui  globals.h  lumina-config.1  lumina-config.8  lumina-config.desktop  lumina-config.pro  main.cpp  mainUI.cpp  mainUI.h  mainUI.ui  mainWindow.cpp  mainWindow.h  mainWindow.ui
src-qt5/core-utils/lumina-control-center/: ColorDialog.cpp  GetPluginDialog.ui  ThemeDialog.cpp  ThemeDialog.h  globals.h  lumina-config.pro  main.cpp  mainWindow.cpp  mainWindow.h
src-qt5/core-utils/lumina-dbus/: lumina-dbus.pro
src-qt5/core-utils/lumina-search/: CMakeLists.txt  ConfigUI.cpp  ConfigUI.ui  MainUI.cpp  MainUI.h  MainUI.ui  Worker.cpp  Worker.h  lumina-search.1  lumina-search.8  lumina-search.desktop  lumina-search.pro  main.cpp
src-qt5/core-utils/lumina-xconfig/: CMakeLists.txt  MainUI.cpp  MainUI.h  MainUI.ui  ScreenSettings.cpp  ScreenSettings.h  lumina-xconfig.1  lumina-xconfig.8  lumina-xconfig.desktop  lumina-xconfig.pro  main.cpp
src-qt5/core/colors/: Black.qss.colors  Blue-Light.qss.colors  Lumina-Glass.qss.colors  Lumina-Green.qss.colors  Solarized-Dark.qss.colors  Solarized-Light.qss.colors
src-qt5/core/libLumina/: CMakeLists.txt  DesktopSettings.cpp  DesktopSettings.h  DesktopSettings.pri  ExternalProcess.h  ExternalProcess.pri  LDesktopUtils.cpp  LDesktopUtils.h  LDesktopUtils.pri  LFileInfo.cpp  LFileInfo.h  LIconCache.cpp  LIconCache.h  LIconCache.pri  LInputDevice.cpp  LInputDevice.h  LInputDevice.pri  LUtils.cpp  LUtils.h  LUtils.pri  LVideoLabel.cpp  LVideoLabel.h  LVideoLabel.pri  LVideoSurface.cpp  LVideoSurface.h  LVideoSurface.pri  LVideoWidget.cpp  LVideoWidget.h  LuminaOS-Debian.cpp  LuminaOS-DragonFly.cpp  LuminaOS-FreeBSD.cpp  LuminaOS-Gentoo.cpp  LuminaOS-Linux.cpp  LuminaOS-NetBSD.cpp  LuminaOS-NixOS.cpp  LuminaOS-OpenBSD.cpp  LuminaOS-Slackware.cpp  LuminaOS-VoidLinux.cpp  LuminaOS-kFreeBSD.cpp  LuminaOS-template.cpp  (+45 more)
src-qt5/core/lumina-checkpass/: lumina-checkpass.pro  main.c
src-qt5/core/lumina-desktop/: AppMenu.cpp  AppMenu.h  BootSplash.cpp  BootSplash.h  BootSplash.ui  CMakeLists.txt  Globals.h  JsonMenu.h  LDesktop.cpp  LDesktop.h  LDesktopBackground.cpp  LDesktopBackground.h  LDesktopPluginSpace.cpp  LDesktopPluginSpace.h  LPanel.cpp  LPanel.h  LSession.cpp  LSession.h  LWinInfo.cpp  LXcbEventFilter.cpp  LXcbEventFilter.h  Lumina-DE.desktop  Lumina-DE.qrc  SettingsMenu.cpp  SettingsMenu.h  SystemWindow.cpp  SystemWindow.h  SystemWindow.ui  WMProcess.cpp  WMProcess.h  global-includes.h  lumina-desktop.1  lumina-desktop.8  lumina-desktop.pro  lumina-panel.pro  main.cpp  main_panel.cpp
src-qt5/core/lumina-desktop-unified/: BootSplash.cpp  BootSplash.ui  JsonMenu.h  LSession.cpp  LSession.h  global-includes.h  global-objects.h  lumina-desktop-unified.desktop  lumina-desktop.pro  main.cpp
src-qt5/core/lumina-info/: CMakeLists.txt  LICENSE  MainUI.cpp  MainUI.h  MainUI.ui  lumina-info.1  lumina-info.8  lumina-info.desktop  lumina-info.pro  lumina-info.qrc  lumina-support.desktop  main.cpp
src-qt5/core/lumina-open/: CMakeLists.txt  LFileDialog.cpp  LFileDialog.h  LFileDialog.ui  lumina-open.1  lumina-open.pro  main.cpp
src-qt5/core/lumina-pingcursor/: CMakeLists.txt  lumina-pingcursor.pro  main.cpp
src-qt5/core/lumina-session/: CMakeLists.txt  lumina-session.pro  main.cpp  session.cpp  session.h  start-lumina-desktop.8
src-qt5/core/lumina-theme-engine/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  ChangeLog.svn  LICENSE  README  README.md  lthemeengine.pri  qt5ct.pri  (+4 more)
src-qt5/desktop-utils/: CMakeLists.txt  desktop-utils.pro
(+2806 files in other folders)
